syntax = "proto3"; 

package greet; 

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
	
option csharp_namespace = "ServiceC";

service Greeter {
   rpc SetWeather (WeatherRequest) returns (ReplyFromServiceC);
} 
message WeatherRequest{
	string description = 1;
	google.protobuf.Timestamp time = 2;
} 
message ReplyFromServiceC{
	string status= 1;
}