syntax = "proto3"; 

package greet; 

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
	
option csharp_namespace = "ServiceC";

service Greeter {
   rpc SetWeather (google.protobuf.Empty) returns (stream WeatherReply);
} 
message Forecast{
	string description = 1;
	google.protobuf.Timestamp time = 2;
}
message WeatherReply { 
	Forecast weather = 1;
}